--- a/api/src/main/resources/reports/isrMain.jrxml
+++ b/api/src/main/resources/reports/isrMain.jrxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Jaspersoft Studio version 6.21.3.final using JasperReports Library version 6.21.3-4a3078d20785ebe464f18037d738d12fc98c13cf  -->
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="ISRMain" pageWidth="792" pageHeight="900" orientation="Landscape" columnWidth="752" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="13acf49e-4913-4d1b-bccc-113817ad15d1">
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="ISRMain" pageWidth="792" pageHeight="940" orientation="Landscape" columnWidth="752" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="13acf49e-4913-4d1b-bccc-113817ad15d1">
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="isrMain"/>
 	<property name="com.jaspersoft.studio.unit." value="pixel"/>
 	<property name="com.jaspersoft.studio.unit.pageHeight" value="pixel"/>
@@ -325,6 +325,82 @@
 		<field name="writtenReasonedEstimatesOutOf" class="java.lang.String">
 			<property name="net.sf.jasperreports.json.field.expression" value="writtenReasonedEstimatesOutOf"/>
 			<fieldDescription><![CDATA[writtenReasonedEstimatesOutOf]]></fieldDescription>
+		</field>
+		<field name="partBChoicePath" class="java.lang.String">
+			<property name="net.sf.jasperreports.json.field.expression" value="partBChoicePath"/>
+			<fieldDescription><![CDATA[partBChoicePath]]></fieldDescription>
+		</field>
+		<field name="partBWrittenResponseAnalyzeScore" class="java.lang.String">
+			<property name="net.sf.jasperreports.json.field.expression" value="partBWrittenResponseAnalyzeScore"/>
+			<fieldDescription><![CDATA[partBWrittenResponseAnalyzeScore]]></fieldDescription>
+		</field>
+		<field name="partBWrittenResponseAnalyzeOutOf" class="java.lang.String">
+			<property name="net.sf.jasperreports.json.field.expression" value="partBWrittenResponseAnalyzeOutOf"/>
+			<fieldDescription><![CDATA[partBWrittenResponseAnalyzeOutOf]]></fieldDescription>
+		</field>
+		<field name="partBWrittenResponseDissertationFoundationScore" class="java.lang.String">
+			<property name="net.sf.jasperreports.json.field.expression" value="partBWrittenResponseDissertationFoundationScore"/>
+			<fieldDescription><![CDATA[partBWrittenResponseDissertationFoundationScore]]></fieldDescription>
+		</field>
+		<field name="partBWrittenResponseDissertationFoundationOutOf" class="java.lang.String">
+			<property name="net.sf.jasperreports.json.field.expression" value="partBWrittenResponseDissertationFoundationOutOf"/>
+			<fieldDescription><![CDATA[partBWrittenResponseDissertationFoundationOutOf]]></fieldDescription>
+		</field>
+		<field name="partBWrittenResponseDissertationFormScore" class="java.lang.String">
+			<property name="net.sf.jasperreports.json.field.expression" value="partBWrittenResponseDissertationFormScore"/>
+			<fieldDescription><![CDATA[partBWrittenResponseDissertationFormScore]]></fieldDescription>
+		</field>
+		<field name="partBWrittenResponseDissertationFormOutOf" class="java.lang.String">
+			<property name="net.sf.jasperreports.json.field.expression" value="partBWrittenResponseDissertationFormOutOf"/>
+			<fieldDescription><![CDATA[partBWrittenResponseDissertationFormOutOf]]></fieldDescription>
+		</field>
+		<field name="partCOralResponsePart1FoundationScore" class="java.lang.String">
+			<property name="net.sf.jasperreports.json.field.expression" value="partCOralResponsePart1FoundationScore"/>
+			<fieldDescription><![CDATA[partCOralResponsePart1FoundationScore]]></fieldDescription>
+		</field>
+		<field name="partCOralResponsePart1FoundationOutOf" class="java.lang.String">
+			<property name="net.sf.jasperreports.json.field.expression" value="partCOralResponsePart1FoundationOutOf"/>
+			<fieldDescription><![CDATA[partCOralResponsePart1FoundationOutOf]]></fieldDescription>
+		</field>
+		<field name="partCOralResponsePart1FormScore" class="java.lang.String">
+			<property name="net.sf.jasperreports.json.field.expression" value="partCOralResponsePart1FormScore"/>
+			<fieldDescription><![CDATA[partCOralResponsePart1FormScore]]></fieldDescription>
+		</field>
+		<field name="partCOralResponsePart1FormOutOf" class="java.lang.String">
+			<property name="net.sf.jasperreports.json.field.expression" value="partCOralResponsePart1FormOutOf"/>
+			<fieldDescription><![CDATA[partCOralResponsePart1FormOutOf]]></fieldDescription>
+		</field>
+		<field name="partCOralResponsePart1OralScore" class="java.lang.String">
+			<property name="net.sf.jasperreports.json.field.expression" value="partCOralResponsePart1OralScore"/>
+			<fieldDescription><![CDATA[partCOralResponsePart1OralScore]]></fieldDescription>
+		</field>
+		<field name="partCOralResponsePart1OralOutOf" class="java.lang.String">
+			<property name="net.sf.jasperreports.json.field.expression" value="partCOralResponsePart1OralOutOf"/>
+			<fieldDescription><![CDATA[partCOralResponsePart1OralOutOf]]></fieldDescription>
+		</field>
+		<field name="partCOralResponsePart2DiscourseFoundationScore" class="java.lang.String">
+			<property name="net.sf.jasperreports.json.field.expression" value="partCOralResponsePart2DiscourseFoundationScore"/>
+			<fieldDescription><![CDATA[partCOralResponsePart2DiscourseFoundationScore]]></fieldDescription>
+		</field>
+		<field name="partCOralResponsePart2DiscourseFoundationOutOf" class="java.lang.String">
+			<property name="net.sf.jasperreports.json.field.expression" value="partCOralResponsePart2DiscourseFoundationOutOf"/>
+			<fieldDescription><![CDATA[partCOralResponsePart2DiscourseFoundationOutOf]]></fieldDescription>
+		</field>
+		<field name="partCOralResponsePart2DiscourseFormScore" class="java.lang.String">
+			<property name="net.sf.jasperreports.json.field.expression" value="partCOralResponsePart2DiscourseFormScore"/>
+			<fieldDescription><![CDATA[partCOralResponsePart2DiscourseFormScore]]></fieldDescription>
+		</field>
+		<field name="partCOralResponsePart2DiscourseFormOutOf" class="java.lang.String">
+			<property name="net.sf.jasperreports.json.field.expression" value="partCOralResponsePart2DiscourseFormOutOf"/>
+			<fieldDescription><![CDATA[partCOralResponsePart2DiscourseFormOutOf]]></fieldDescription>
+		</field>
+		<field name="partCOralResponsePart2DiscourseOralScore" class="java.lang.String">
+			<property name="net.sf.jasperreports.json.field.expression" value="partCOralResponsePart2DiscourseOralScore"/>
+			<fieldDescription><![CDATA[partCOralResponsePart2DiscourseOralScore]]></fieldDescription>
+		</field>
+		<field name="partCOralResponsePart2DiscourseOralOutOf" class="java.lang.String">
+			<property name="net.sf.jasperreports.json.field.expression" value="partCOralResponsePart2DiscourseOralOutOf"/>
+			<fieldDescription><![CDATA[partCOralResponsePart2DiscourseOralOutOf]]></fieldDescription>
 		</field>
 	</subDataset>
 	<queryString language="JSON">
@@ -923,6 +999,108 @@
 								<subreportParameterExpression><![CDATA[$F{partCOralResponsePart3OutOf}]]></subreportParameterExpression>
 							</subreportParameter>
 							<subreportExpression><![CDATA["ltp12summary.jasper"]]></subreportExpression>
+						</subreport>
+						<subreport>
+							<reportElement stretchType="RelativeToTallestObject" isPrintRepeatedValues="false" x="0" y="0" width="752" height="530" uuid="11223344-5566-7788-9900-aabbccddeeda">
+								<printWhenExpression><![CDATA[$F{assessmentCode}.equals("LTF12")]]></printWhenExpression>
+							</reportElement>
+							<subreportParameter name="assessmentCode">
+								<subreportParameterExpression><![CDATA[$F{assessmentCode}]]></subreportParameterExpression>
+							</subreportParameter>
+							<subreportParameter name="session">
+								<subreportParameterExpression><![CDATA[$F{session}]]></subreportParameterExpression>
+							</subreportParameter>
+							<subreportParameter name="score">
+								<subreportParameterExpression><![CDATA[$F{score}]]></subreportParameterExpression>
+							</subreportParameter>
+							<subreportParameter name="partBChoicePath">
+								<subreportParameterExpression><![CDATA[$F{partBChoicePath}]]></subreportParameterExpression>
+							</subreportParameter>
+							<subreportParameter name="comprehendScore">
+								<subreportParameterExpression><![CDATA[$F{comprehendScore}]]></subreportParameterExpression>
+							</subreportParameter>
+							<subreportParameter name="comprehendOutOf">
+								<subreportParameterExpression><![CDATA[$F{comprehendOutOf}]]></subreportParameterExpression>
+							</subreportParameter>
+							<subreportParameter name="communicateScore">
+								<subreportParameterExpression><![CDATA[$F{communicateScore}]]></subreportParameterExpression>
+							</subreportParameter>
+							<subreportParameter name="communicateOutOf">
+								<subreportParameterExpression><![CDATA[$F{communicateOutOf}]]></subreportParameterExpression>
+							</subreportParameter>
+							<subreportParameter name="communicateOralScore">
+								<subreportParameterExpression><![CDATA[$F{communicateOralScore}]]></subreportParameterExpression>
+							</subreportParameter>
+							<subreportParameter name="communicateOralOutOf">
+								<subreportParameterExpression><![CDATA[$F{communicateOralOutOf}]]></subreportParameterExpression>
+							</subreportParameter>
+							<subreportParameter name="partASelectedResponseScore">
+								<subreportParameterExpression><![CDATA[$F{partASelectedResponseScore}]]></subreportParameterExpression>
+							</subreportParameter>
+							<subreportParameter name="partASelectedResponseOutOf">
+								<subreportParameterExpression><![CDATA[$F{partASelectedResponseOutOf}]]></subreportParameterExpression>
+							</subreportParameter>
+							<subreportParameter name="partBSelectedResponseScore">
+								<subreportParameterExpression><![CDATA[$F{partBSelectedResponseScore}]]></subreportParameterExpression>
+							</subreportParameter>
+							<subreportParameter name="partBSelectedResponseOutOf">
+								<subreportParameterExpression><![CDATA[$F{partBSelectedResponseOutOf}]]></subreportParameterExpression>
+							</subreportParameter>
+							<subreportParameter name="partBWrittenResponseAnalyzeScore">
+								<subreportParameterExpression><![CDATA[$F{partBWrittenResponseAnalyzeScore}]]></subreportParameterExpression>
+							</subreportParameter>
+							<subreportParameter name="partBWrittenResponseAnalyzeOutOf">
+								<subreportParameterExpression><![CDATA[$F{partBWrittenResponseAnalyzeOutOf}]]></subreportParameterExpression>
+							</subreportParameter>
+							<subreportParameter name="partBWrittenResponseDissertationFoundationScore">
+								<subreportParameterExpression><![CDATA[$F{partBWrittenResponseDissertationFoundationScore}]]></subreportParameterExpression>
+							</subreportParameter>
+							<subreportParameter name="partBWrittenResponseDissertationFoundationOutOf">
+								<subreportParameterExpression><![CDATA[$F{partBWrittenResponseDissertationFoundationOutOf}]]></subreportParameterExpression>
+							</subreportParameter>
+							<subreportParameter name="partBWrittenResponseDissertationFormScore">
+								<subreportParameterExpression><![CDATA[$F{partBWrittenResponseDissertationFormScore}]]></subreportParameterExpression>
+							</subreportParameter>
+							<subreportParameter name="partBWrittenResponseDissertationFormOutOf">
+								<subreportParameterExpression><![CDATA[$F{partBWrittenResponseDissertationFormOutOf}]]></subreportParameterExpression>
+							</subreportParameter>
+							<subreportParameter name="partCOralResponsePart1FoundationScore">
+								<subreportParameterExpression><![CDATA[$F{partCOralResponsePart1FoundationScore}]]></subreportParameterExpression>
+							</subreportParameter>
+							<subreportParameter name="partCOralResponsePart1FoundationOutOf">
+								<subreportParameterExpression><![CDATA[$F{partCOralResponsePart1FoundationOutOf}]]></subreportParameterExpression>
+							</subreportParameter>
+							<subreportParameter name="partCOralResponsePart1FormScore">
+								<subreportParameterExpression><![CDATA[$F{partCOralResponsePart1FormScore}]]></subreportParameterExpression>
+							</subreportParameter>
+							<subreportParameter name="partCOralResponsePart1FormOutOf">
+								<subreportParameterExpression><![CDATA[$F{partCOralResponsePart1FormOutOf}]]></subreportParameterExpression>
+							</subreportParameter>
+							<subreportParameter name="partCOralResponsePart1OralScore">
+								<subreportParameterExpression><![CDATA[$F{partCOralResponsePart1OralScore}]]></subreportParameterExpression>
+							</subreportParameter>
+							<subreportParameter name="partCOralResponsePart1OralOutOf">
+								<subreportParameterExpression><![CDATA[$F{partCOralResponsePart1OralOutOf}]]></subreportParameterExpression>
+							</subreportParameter>
+							<subreportParameter name="partCOralResponsePart2DiscourseFoundationScore">
+								<subreportParameterExpression><![CDATA[$F{partCOralResponsePart2DiscourseFoundationScore}]]></subreportParameterExpression>
+							</subreportParameter>
+							<subreportParameter name="partCOralResponsePart2DiscourseFoundationOutOf">
+								<subreportParameterExpression><![CDATA[$F{partCOralResponsePart2DiscourseFoundationOutOf}]]></subreportParameterExpression>
+							</subreportParameter>
+							<subreportParameter name="partCOralResponsePart2DiscourseFormScore">
+								<subreportParameterExpression><![CDATA[$F{partCOralResponsePart2DiscourseFormScore}]]></subreportParameterExpression>
+							</subreportParameter>
+							<subreportParameter name="partCOralResponsePart2DiscourseFormOutOf">
+								<subreportParameterExpression><![CDATA[$F{partCOralResponsePart2DiscourseFormOutOf}]]></subreportParameterExpression>
+							</subreportParameter>
+							<subreportParameter name="partCOralResponsePart2DiscourseOralScore">
+								<subreportParameterExpression><![CDATA[$F{partCOralResponsePart2DiscourseOralScore}]]></subreportParameterExpression>
+							</subreportParameter>
+							<subreportParameter name="partCOralResponsePart2DiscourseOralOutOf">
+								<subreportParameterExpression><![CDATA[$F{partCOralResponsePart2DiscourseOralOutOf}]]></subreportParameterExpression>
+							</subreportParameter>
+							<subreportExpression><![CDATA["ltf12summary.jasper"]]></subreportExpression>
 						</subreport>
 					</jr:listContents>
 				</jr:list>
